--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,14 @@ h2 {
     margin-right: 2rem;
 }
 
+h4 {
+    font-size: 20px;
+}
+
+p {
+    font-size: 16px !important;
+}
+
 ul li{
     list-style-type: none;
     display: inline;
